# ecs-test

./: .nvim.lua  CMakeLists.txt  results.md  run.sh
.cache/clangd/index/: ecs.cpp.4F24A6A798F9D9D0.idx  ecs.hpp.C16567B9800848AA.idx  main.cpp.1E6CA23A35B5967E.idx
include/: ecs.hpp  types.hpp
src/: ecs.cpp  main.cpp
